--- a/aok_stock/views/stock_picking_views.xml
+++ b/aok_stock/views/stock_picking_views.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
             <field name="origin" position="after">
+                <field name="received_date" attrs="{'invisible': [('picking_type_code', '!=', 'incoming')]}"/>
                 <field name="picker_id"/>
                 <field name="picking_note"/>
                 <field name="sale_id" readonly="1"/>
